--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "mget"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.47", features = ["derive"] }
+futures = "0.3.31"
+tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
