--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 clap = { version = "4.5.47", features = ["derive"] }
 futures = "0.3.31"
 indicatif = { version = "0.18.0", features = ["tokio"] }
-reqwest = "0.12.23"
-tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
+reqwest = { version = "0.12.23", features = ["stream"] }
+tokio = { version = "1.47.1", features = ["full"] }
