--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "rwget"
-version = "0.1.4"
+version = "0.1.6"
 edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.47", features = ["derive"] }
 futures = "0.3.31"
 indicatif = { version = "0.18.0", features = ["tokio"] }
+percent-encoding = "2.3.2"
 reqwest = { version = "0.12.23", features = ["stream"] }
 tokio = { version = "1.47.1", features = ["full"] }
