--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "rwget"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2021"
+license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.47", features = ["derive"] }
